# devcli

./: .gitignore  Project_assigment_devcli.docx  README.md  analysis_report.md  assigment.md  cli.py  failure_report.md  prompts.txt  pyproject.toml  test.py  tmp_sample.py
.pytest_cache/v/cache/: lastfailed  nodeids
devcli/: __init__.py  analyzer.py  ast_utils.py  cli.py  failure_analyzer.py  models.py  parser.py  reporter.py  runner.py  traceback_parser.py
devcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_new.py  test_traceback_parser.py
